Refactor: Replace collect(Collectors.toList()) with toList()